workflow to publish package

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "ymap3-components",
   "version": "1.0.0",
   "description": "React wrappers for ymap3 rectified components",
-  "main": "index.ts",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "vite build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "build": "vite build && tsc"
+   },
   "keywords": [
     "react",
     "yandex-map",
@@ -31,5 +35,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "publishConfig": {
+    "@fede4ka1245:registry": "https://npm.pkg.github.com"
   }
 }
