--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ymap3-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React wrappers for ymap3 rectified components",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
@@ -22,6 +22,13 @@
     "map-components"
   ],
   "author": "https://github.com/fede4ka1245",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fede4ka1245/ymap3-components.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fede4ka1245/ymap3-components.git/issues"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^18.2.45",
