--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ymap3-components",
   "version": "1.0.2",
-  "description": "React wrappers for ymap3 rectified components",
+  "description": "React wrappers for ymaps3 rectified components",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "vite build && tsc"
-   },
+  },
   "keywords": [
     "react",
     "yandex-map",
