--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ymap3-components",
-  "version": "1.1.0",
-  "description": "React yamps3 wrapper. Get ymaps3 components via import",
+  "version": "1.1.1",
+  "description": "React yamps3 wrapper. Get ymaps3 components via import.",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
