--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ymap3-components",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "React yamps3 wrapper. Get ymaps3 components via import.",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
@@ -44,8 +44,8 @@
     "vite": "^5.0.10"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0 || ^19.0.0",
+    "react-dom": "^18.2.0 || ^19.0.0"
   },
   "publishConfig": {
     "@fede4ka1245:registry": "https://npm.pkg.github.com"
